Bug 357283 - kmail tool menu is different if started as standalone application than a kontact part
Summary: kmail tool menu is different if started as standalone application than a kont...
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-28 21:22 UTC by luisfe
Modified: 2015-12-29 06:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description luisfe 2015-12-28 21:22:45 UTC
The content of the menu is different if kmail is started as a standalone application or as a kontact component.

The following components are different:

- Address Book entrie does not appear if started inside kontact, this may be intended

- The two wizards: anti-spam wizard and anti-virus wizard only appear if kmail is started as a standalone application and not inside kontact


Reproducible: Always

Steps to Reproduce:
1.start kmail, check tool menu
2.start kontact with kmail part, check tool menu
3.

Actual Results:  
The tool menus are different

Expected Results:  
At least the anti-spam anti-virus wizard should appear in both cases
Comment 1 Laurent Montel 2015-12-29 05:48:08 UTC
indeed it's a bug if it doesn't appear in kontact.
Comment 2 Laurent Montel 2015-12-29 05:50:23 UTC
Ok when we switch apps menu is not refreshed.
Ok I will fix it soon.
Comment 3 Laurent Montel 2015-12-29 06:06:24 UTC
Git commit f0ba9da055ace9d91ad1981e27a767806ca8c43b by Montel Laurent.
Committed on 29/12/2015 at 06:05.
Pushed by mlaurent into branch 'master'.

Fix Bug 357283 - kmail tool menu is different if started as standalone application than a kontact part

M  +1    -0    kaddressbook/kaddressbookpart.cpp
M  +2    -1    kaddressbook/mainwidget.h
M  +1    -0    kmail/kmail_part.cpp

http://commits.kde.org/kdepim/f0ba9da055ace9d91ad1981e27a767806ca8c43b