Fix Bug 357283 - kmail tool menu is different if started as standalone application than a kontact part

BUG: 357283